syntax = "proto3";

package service.v1alpha1;

import "io_descriptors.proto";

// IODescriptor defines the payload for an io_descriptor.
message IODescriptor {
  oneof io_descriptor {
    string text = 1;
    Array array = 2;
  }
}

// RouteCallRequest represents a request payload that user send
// to the BentoService.
// @api_name: given API route the rpc request is sent to.
message RouteCallRequest {
  string api_name = 1;
  IODescriptor input = 2;
}

// RouteCallResponse represents response payload that user receive
// from the BentoService.
// TODO: status, error
message RouteCallResponse {
  IODescriptor output = 1;
}

// BentoService represents a gRPC BentoService.
// rpc RouteCall defines the gRPC API method user can write in their code.
service BentoService {
  // RouteCall is the rpc that takes a `RouteCallRequest` and returns `RouteCallResponse`.
  rpc RouteCall(RouteCallRequest) returns (RouteCallResponse);
}
